GameObject is now working and edited game.js to use GameObject

--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <title>AstroBattle</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="semantic/dist/semantic.min.js"></script>
     <script src="p5.min.js"></script>
     <script src="ship.js"></script>
+    <script src="GameObject.js"></script>
 </head>
 
 <body>
