--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>AstroBattle</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="https://raw.githubusercontent.com/lodash/lodash/4.17.15-npm/lodash.min.js"></script>
+    <script src="lodash.js"></script>
     <script src="p5.min.js"></script>
     <script src="GameObject.js"></script>
     <script src="ship.js"></script>
